* include/ruby/ruby.h (rb_array_const_ptr, rb_struct_const_ptr):   Suppress pointer type mismatch warnings occurred with old version   of Fujitsu C Compiler (fcc) on Solaris 10. The warnings cause   failure of TestMkmf::TestConvertible. [Bug #11644] [ruby-dev:49326] * include/ruby/ruby.h (FIX_CONST_VALUE_PTR): macro for the above,   only effective with fcc.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@52465 b2dd03c8-39d4-4d8f-98ff-823fe69b080e